--- a/app1.css
+++ b/app1.css
@@ -1,3 +1,61 @@
+/* header */
+
+body
+{
+    margin: 0%;
+    background-color: #61C1C6;
+}
+
+.nav-container
+{
+display: flex;
+flex-direction: row;
+background-color: black;
+opacity: 0.9;
+
+}
+
+.nav-container img
+{
+width: 10%;
+height: 20%;
+}
+
+header
+{
+
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+}
+
+a
+{
+    color: #1c9cd8;
+    padding: 30px;
+    text-decoration: none;
+
+}
+
+a:hover
+{
+    color: brown;
+}
+
+.noir
+{
+    padding: 27px;
+    margin-bottom: 100px;
+}
+
+/* footer */
+
+.footer
+{
+    text-align: center;
+
+}
+
 /* premiere partie du main */
 .tik-container
 {
@@ -27,9 +85,50 @@ margin: 10%;
 {
 width: 20%;
 height: 20%;
-padding: 10px;
 }
 
+.image
+{
+    text-align: center;
+    padding: 5%;
+}
 
+.align
+{
+    text-align: center;
+    padding: 5%;
+}
 
+.align img
+{
+    width: 6%;
+    height: 6%; 
+}
 
+/* Texte et couleur */
+
+p
+{
+    text-align: center;
+}
+
+.tik h1
+{
+    color: #E62056;
+}
+
+.bouton1
+{
+    
+    border-radius: 30px;
+    color: white;
+    font-size: 30px;
+}
+
+.bouton2
+{
+    border: 4px solid #E62056;
+    border-radius: 30px;
+    color: white;
+    font-size: 30px;
+}
