--- a/app-favorites.css
+++ b/app-favorites.css
@@ -110,10 +110,10 @@ max-width: 100%;
 
 /* article article */
 
-.acimage-container img
+.acimage-container img 
 {
-    max-width: 50%;
-
+    width: 100%;
+    height: 100%;
 }
 
 .acimage-container
@@ -124,7 +124,8 @@ max-width: 100%;
 
 .acimage1-container img
 {
-    max-width: 50%;
+    width: 100%;
+    height: 100%;
 }
 
 .acimage1-container 
@@ -135,7 +136,8 @@ max-width: 100%;
 
 .acimage2-container img
 {
-    max-width: 50%;
+    width: 100%;
+    height: 100%;  
 }
 
 
@@ -144,4 +146,3 @@ max-width: 100%;
     display: flex;
     flex-direction: row;
 }
-
