--- a/app2.css
+++ b/app2.css
@@ -113,3 +113,15 @@ a:hover
     text-align: center;
     padding: 5%;
 }
+
+.wecha-container img
+{
+    width: 100%;
+    height: 100%;
+}
+
+.wecha-container
+{
+ display: flex;
+ flex-direction: row;
+}
