--- a/app3.css
+++ b/app3.css
@@ -17,8 +17,8 @@ opacity: 0.9;
 
 .nav-container img
 {
-width: 10%;
-height: 20%;
+width: 5%;
+height: 5%;
 }
 
 header
@@ -76,5 +76,28 @@ a:hover
 {
     margin: auto;
     padding: 10%;
+    
+}
+
+.youtu-container img
+{
+    width: 100%;
+    height: 100%;
+}
+
+.youta-container img
+{
+    width: 20%;
+    height: 20%;
+}
+
+.youta-container
+{
+    text-align: center;
+}
+
+.rara
+{
+    text-align: center;
     
 }
