update sur toutes les pages

--- a/app2.css
+++ b/app2.css
@@ -125,3 +125,33 @@ a:hover
  display: flex;
  flex-direction: row;
 }
+
+.gaa-container
+{
+    display: flex;
+    flex-direction: row;
+}
+
+.gaa-container img
+{
+    width: 100%;
+    height: 100%;
+}
+
+.goo-container
+{
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+}
+
+.goo-container img
+{
+    width: 100%;
+    height: 100%;
+}
+
+.goo-container p
+{
+    padding: 25%;
+}
