--- a/app-favorites.css
+++ b/app-favorites.css
@@ -110,17 +110,12 @@ max-width: 100%;
 
 /* article article */
 
-.acimage-container img 
+.acimage img
 {
     width: 100%;
     height: 100%;
 }
 
-.acimage-container
-{
-    display: flex;
-    flex-direction: row;
-}
 
 .acimage1-container img
 {
