--- a/app1.css
+++ b/app1.css
@@ -137,13 +137,19 @@ p
 
 .ap-container img
 {
-
 width: 100%;
 height: 100%;
+
 }
 
 .ap-container
 {
    display: flex;
    flex-direction: row;
+}
+
+.titoo img
+{
+    width: 100%;
+    height: 100%;
 }
