--- a/app3.css
+++ b/app3.css
@@ -55,8 +55,18 @@ a:hover
 .footer
 {
     text-align: center;
-    color: #1c9cd8;
+    color: white;
     padding: 30px;
+    text-decoration: none;
+    background-color: black;
+    font-family: 'Bangers', cursive;
+
+
+}
+
+.footer a
+{
+    color: red;
     text-decoration: none;
 
 }
@@ -75,6 +85,15 @@ a:hover
 {
     max-width: 90%;
 
+}
+.you-container a
+
+{
+border: 1px solid yellow;
+padding: 10px;
+border-radius: 10px;
+text-decoration: none;
+color: white;
 }
 
 .you
@@ -98,6 +117,7 @@ a:hover
 {
     width: 20%;
     height: 20%;
+    border-radius: 10px;
 }
 
 .youta-container
@@ -113,6 +133,7 @@ a:hover
 {
     width: 90%;
     height: 90%;
+    border-radius: 10px;
 }
 
 .rara-container 
@@ -120,20 +141,34 @@ a:hover
     display: flex;
     flex-direction: row;
     text-align: center;
-    font-family: 'Carter One', cursive;
+    
 
 }
-
-
-/* Main main devellopement */
-
-.bouton3
+.rara-container p
 {
+    font-family: 'Carter One', cursive;
+    text-shadow: 2px 1px 7px yellow;
+    border: 1px solid yellow;
+    border-radius: 10px;
+    box-shadow: 2px 1px 12px yellow;
+}
+
+.rara-container a
+{
+    text-decoration: none;
     position: absolute;
     margin: 65%;
     right: 0;
-    font-size: 70px;
-
-
-
+    font-family: 'Carter One', cursive;
+    text-shadow: 2px 1px 7px yellow;
+    border: 1px solid yellow;
+    font-size: 60px;
+    border-radius: 10px;
+    background-color: white;
+    color: pink;
 }
+
+
+
+
+
