--- a/app1.css
+++ b/app1.css
@@ -44,11 +44,6 @@ a:hover
     color: yellow;
 }
 
-.noir
-{
-    padding: 27px;
-    margin-bottom: 100px;
-}
 
 /* footer */
 
@@ -65,25 +60,26 @@ a:hover
 {
     display: flex;
     flex-direction: row;
+    font-family: "Gill Sans", sans-serif;
+    align-items: center;
+    margin: 30px;
+    padding: 30px;
+
+
 }
 
 .tik-container img
 {
-max-width: 140%;
+max-width: 80%;
 
-margin: 10%;
 }
 
-.tik
-{
-    font-family: "Gill Sans", sans-serif;
-    margin: auto;
-    padding: 300px;
-}
+
 
 .tik-container h1
 {
     font-size: 200%;
+    color: #FE2C55;
 }
 
 .image img
@@ -122,10 +118,6 @@ p
     text-align: center;
 }
 
-.tik h1
-{
-    color: #FE2C55;
-}
 
 .bouton1
 {
