--- a/app-favorites.css
+++ b/app-favorites.css
@@ -12,7 +12,7 @@ flex-direction: row;
 background-color: #A6A6A6;
 opacity: 0.8;
 
-font-family: 'Palanquin', sans-serif;;
+font-family: 'Palanquin', sans-serif;
 }
 
 .nav-container img
